2006-01-25  9:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridAddNodeWithGlobal) to avoid a zero map after
	reallocation, do not realloc grid->map if it is NULL.

2006-01-25  9:02 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridPhase1) allow negative cells and faces on
	edge node insert, but not on unused removal.

2006-01-25  9:02 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridedgerDiscretizeEvenly) to increase
	robustness, when gridedgerDiscretize NULL, try a nearby length to
	keep going.

2006-01-25  8:50 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridedgerDiscretize) to prevent seg fault,
	return NULL when ge->t freed due to gridedgerLengthToS failure.

2006-01-24 16:50 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerInsert) Reuse a node instead of
	inserting if it is already in the right place.

2006-01-24 14:00 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridPhase2) call gridfacerCollapse.
	* src/gridfacer.c (gridfacerCollapseEdge) fixed bug that added
	edges from other faces to edge list.

2006-01-24 13:07 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) return -999.0 if anything breaks.

2006-01-24 12:48 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCollapse) refactored to only do
	edges on face. warning O(nedges^2).

2006-01-24 11:33 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) report gridMap failure and
	return -1.0

2006-01-23 16:22 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerRemoveEdgesWithNode) removes edges
	touching node.  
	* src/gridfacer.c (gridfacerCollapseEdge) edges are repaired.

2006-01-23 16:12 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCollapse,gridfacerCollapseEdge) working,
	but edges need to be cleaned up.

2006-01-20 15:23 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerEquateLengths) smooth node location to
	reduce the longest ratio edge. this got 0.005 to work, but more