@@ -34,6 +34,7 @@ void gridMapXYZWithJ( double *j, double *x, double *y, double *z );
 
 double gridEdgeLength(Grid *g, int n0, int n1 );
 Grid *gridEdgeRatioRange(Grid *g, double *longest, double *shortest );
+Grid *gridEdgeRatioRangeInVolume(Grid *g, double *longest, double *shortest );
 double gridEdgeRatio(Grid *g, int n0, int n1 );
 Grid *gridEdgeRatio3(Grid *g, int n0, int n1, double *ratio );
 double gridEdgeRatioError(Grid *g, int n0, int n1 );
