@@ -1,3 +1,8 @@
+2006-01-25 16:10 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmetric.c (gridEdgeRatioRange) refactored to loop over cells.
+	* src/gridmetric.c (gridEdgeRatioRangeInVolume) exclude surface.
+
 2006-01-25  9:55 Mike Park  <mike.park@nasa.gov>
 
 	* src/grid.c (gridAddNodeWithGlobal) to avoid a zero map after
